commit all staged file

--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This is IM demo project based on websocket.
-You need to bulid in node.
-Then you can view in browser by http://localhost:8000
+This is a IM demo based on websocket
